[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "infra"
version = "0.1.1"
description = "A lightweight Python utility for file-based logging and persistent state tracking."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "MJBM", email = "mohamnarut@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent"
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/MJBM2510/infra"
"Source" = "https://github.com/MJBM2510/infra"
