[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SLinfra"
version = "1.0.0"
description = "A lightweight Python utility for file-based logging and persistent state tracking."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "MJBM", email = "mj1100125@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent"
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
"Homepage" = "https://github.com/MJBM2510/SLinfra"
"Source" = "https://github.com/MJBM2510/SLinfra"